<resources>
    <string name="app_name">Market</string>
    <string name="product_title">Product title</string>
    <string name="product_subtitle">Product Subtitle</string>
    <string name="category">category</string>
    <!--Category Spinner -->
    <string-array name="category">
        <item>Select Item</item>
        <item>Meyve</item>
        <item>Sebze</item>
        <item>İçecek</item>
        <item>Temel Gıda</item>
        <item>Hazır Gıda</item>
        <item>Bakliyat</item>
        <item>Et</item>
        <item>Paketli Gıda</item>
    </string-array>

    <string-array name="categoryNames">
        <item>All</item>
        <item>Meyve</item>
        <item>Sebze</item>
        <item>İçecek</item>
        <item>Temel Gıda</item>
        <item>Hazır Gıda</item>
        <item>Bakliyat</item>
        <item>Et</item>
        <item>Paketli Gıda</item>
    </string-array>

    <string name="food">EFSANE LEZZETLER</string>
    <string name="delivery">HIZLI TESLİMAT</string>
    <string name="payment">HIZLI ÖDEME</string>
    <string name="lorem1">Efsane lezzetler tek tıkla kapına gelsin</string>
    <string name="lorem2">Temassız ve Hızlı teslimat ile güvenli ödeme seçenekleri</string>
    <string name="lorem3">Tek tıkla öde, bekleme!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FoodGrocery">Food Grocery</string>
    <string name="text">Login To Your Account</string>
    <string name="signUpText">Sign Up For Free</string>
    <string name="forgot_pass">Forgot Your Password?</string>
    <string name="by_tapping_">Or Continue With</string>
    <string name="existingAccount">already have an account?</string>
    <string name="dontaccount">Do not have an account?Register Here!</string>

</resources>