<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app= "http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/logo_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="450dp"
        android:background="@drawable/ic_pattern"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toTopOf="@+id/text" />


    <View
        android:id="@+id/logo"
        android:layout_width="194dp"
        android:layout_height="170dp"
        android:background="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="19dp" />

    <TextView
        android:id="@+id/foodGroceryText"
        android:layout_width="215dp"
        android:layout_height="83dp"
        android:fontFamily="@font/viga"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/FoodGrocery"
        android:textAppearance="@style/FoodGrocery"
        android:textColor="#53E88B"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="199dp" />


    <TextView
        android:id="@+id/text"
        android:layout_width="217dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="6sp"
        android:text="@string/text"
        android:textAppearance="@style/text"
        android:translationY="-3sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="305dp" />

    <RelativeLayout
        android:id= "@id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/form_border"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@+id/text">

        <!-- INPUT -->
        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/email_icon"
            android:background="@android:color/transparent"
            android:fontFamily="@font/viga"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp" />

        <!-- ICON -->
        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:src="@drawable/ic_email" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/form_border"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="34dp">

        <!-- INPUT -->
        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/password_icon"
            android:background="@android:color/transparent"
            android:fontFamily="@font/viga"
            android:hint="Password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:maxLines="1"
            android:paddingLeft="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp"
            app:passwordToggleEnabled="true" />

        <!-- ICON -->
        <ImageView
            android:id="@+id/password_icon"
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:src="@drawable/ic_password" />

    </RelativeLayout>

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="8sp"
        android:text="@string/forgot_pass"
        android:textColor="#53E88B"
        android:textAppearance="@style/forgot_pass"
        android:translationY="-3.93sp"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="503dp"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#53E88B"
        android:text="Login"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="530dp" />

    <TextView
        android:id="@+id/by_tapping_"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="8sp"
        android:text="@string/by_tapping_"
        android:textAppearance="@style/by_tapping_"
        android:translationY="-3.93sp"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="603dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="651dp">

        <ImageView
            android:layout_width="38dp"
            android:layout_height="57dp"
            android:src="@drawable/fb" />

        <ImageView
            android:layout_width="39dp"
            android:layout_height="57dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/instagram" />

        <ImageView
            android:layout_width="42dp"
            android:layout_height="57dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/twitter" />

        <ImageView
            android:layout_width="41dp"
            android:layout_height="57dp"
            android:src="@drawable/google" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>