<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app= "http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/logo_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="450dp"
        android:background="@drawable/ic_pattern"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toTopOf="@+id/text" />


    <View
        android:id="@+id/logo"
        android:layout_width="194dp"
        android:layout_height="170dp"
        android:background="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="19dp" />

    <TextView
        android:id="@+id/foodGroceryText"
        android:layout_width="215dp"
        android:layout_height="83dp"
        android:fontFamily="@font/viga"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/FoodGrocery"
        android:textAppearance="@style/FoodGrocery"
        android:textColor="#53E88B"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="199dp" />


    <TextView
        android:id="@+id/signText"
        android:layout_width="217dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="6sp"
        android:text="@string/signUpText"
        android:textAppearance="@style/text"
        android:translationY="-3sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="305dp" />

    <RelativeLayout
        android:id= "@id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/form_border"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@+id/signText">

        <!-- INPUT -->
        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/username_icon"
            android:background="@android:color/transparent"
            android:fontFamily="@font/viga"
            android:hint="Username"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp" />

        <!-- ICON -->
        <ImageView
            android:id="@+id/username_icon"
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:src="@drawable/ic_username" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/form_border"
        app:layout_constraintTop_toBottomOf="@+id/username_input"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp">

        <!-- INPUT -->

        <!-- ICON -->
        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_toRightOf="@+id/email_icon"
            android:background="@android:color/transparent"
            android:fontFamily="@font/viga"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:src="@drawable/ic_email" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/form_border"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="72dp">

        <!-- INPUT -->
        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/password_icon"
            android:background="@android:color/transparent"
            android:fontFamily="@font/viga"
            android:hint="Password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:maxLines="1"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingRight="30dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp" />

        <!-- ICON -->
        <ImageView
            android:id="@+id/password_icon"
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:src="@drawable/ic_password" />



    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/rePassword_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/form_border"
        app:layout_constraintTop_toBottomOf="@+id/password_layout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="72dp">

        <!-- INPUT -->
        <EditText
            android:id="@+id/rePassword_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/rePassword_icon"
            android:background="@android:color/transparent"
            android:fontFamily="@font/viga"
            android:hint="Re-Password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:maxLines="1"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingRight="30dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp" />

        <!-- ICON -->
        <ImageView
            android:id="@+id/rePassword_icon"
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:src="@drawable/ic_password" />



    </RelativeLayout>

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="8sp"
        android:text="@string/existingAccount"
        android:textAppearance="@style/forgot_pass"
        android:textColor="#53E88B"
        android:translationY="-3.93sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="705dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#53E88B"
        android:text="Create Account"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="643dp" />

</androidx.constraintlayout.widget.ConstraintLayout>